// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing on <GifGrid/> should render correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInUp"
  >
     
    patas
     
  </h3>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <p
        className="animate__animated animate__hinge animate__delay-0.5s"
      >
        Loading...
      </p>
          
      <div
        className="cardGrid"
      />
    </div>
  </div>
</Fragment>
`;

exports[`Testing on <GifGrid/> should show items when images loaded  via userfetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInUp"
  >
     
    patas
     
  </h3>
  <div
    className="container"
  >
    <div
      className="row"
    >
          
      <div
        className="cardGrid"
      >
        <GifGridItem
          id="abs"
          key="abs"
          title="somethins"
          url="https://algo"
        />
        <GifGridItem
          id="absdsfafa"
          key="absdsfafa"
          title="patitas"
          url="https://algo3"
        />
      </div>
    </div>
  </div>
</Fragment>
`;
